crates/oxc_react_compiler/tests/snapshots/default-suppression-eslint-block-range.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/default-suppression-eslint-block-range.js
---
import { c as _c } from "react/compiler-runtime";
/* eslint-disable react-hooks/rules-of-hooks */
function Component(t0) {
	const $ = _c(2);
	const { value } = t0;
	const doubled = value * 2;
	let t1;
	if ($[0] !== doubled) {
		t1 = <div>{doubled}</div>;
		$[0] = doubled;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
