crates/oxc_react_compiler/tests/snapshots/delete-computed-property.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/delete-computed-property.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(3);
	let x;
	if ($[0] !== props.a || $[1] !== props.b) {
		x = {
			a: props.a,
			b: props.b
		};
		delete x["b"];
		$[0] = props.a;
		$[1] = props.b;
		$[2] = x;
	} else {
		x = $[2];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
