crates/oxc_react_compiler/tests/snapshots/dependencies-outputs.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/dependencies-outputs.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a, b) {
	const $ = _c(5);
	let x;
	if ($[0] !== a) {
		x = [];
		x.push(a);
		$[0] = a;
		$[1] = x;
	} else {
		x = $[1];
	}
	let y;
	if ($[2] !== b || $[3] !== x) {
		y = [];
		if (x.length) {
			y.push(x);
		}
		if (b) {
			y.push(b);
		}
		$[2] = b;
		$[3] = x;
		$[4] = y;
	} else {
		y = $[4];
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
