crates/oxc_react_compiler/tests/snapshots/destructure-capture-global.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructure-capture-global.js
---
import { c as _c } from "react/compiler-runtime";
let someGlobal = {};
function component(a) {
	const $ = _c(2);
	let t0;
	if ($[0] !== a) {
		t0 = {
			a,
			someGlobal
		};
		$[0] = a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["value 1"],
	isComponent: false
};
